[tool.poetry]
name = "wee6"
version = "0.1.0"
description = "a mee6 premium bypasser"
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
mee6-py-api = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
